# aetherflow

./: .coderabbit.yaml  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .markdownlintignore  .prettierignore  .prettierrc  .secrets.baseline  .shellcheckrc  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  PLAN.md  README.md  REWORK_PLAN.md  SECURITY.md  aetherflow.sublime-project  agent_manifest.json  main.py  package.json  pyproject.toml  reset_env.ps1  start-loop2.ps1
.agents/rules/: code-style.md  project-specific.md
.claude/agents/: bug-fixer.md  cleanup-specialist.md  code-reviewer.md  debugger.md  dependency-manager.md  manage-uv.md  security-reviewer.md
.claude/commands/: label-issue.md
.claude/plans/: purrfect-foraging-rainbow.md
.cursor/agents/: evidence-proof-matrix-reviewer.md
.devcontainer/: devcontainer.json
.gemini/: config.yaml  styleguide.md
.github/agents/: plan-work-item-auditor.agent.md
.github/hooks/: audit.json  context.json  format.json  security.json  test.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codex-review.yml  gemini-dispatch.yml  gemini-review.yml  issue-triage.yml  security.yml
assets/trust/: manifest_keys.json
docs/: PLAN.md  PRD.md  prd-execution-governance-rewrite.md  requirements-report.md  verification_standard.md  verify-requirements-pipeline.md
docs/adr/: 0001-runtime-authority.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/architecture/: delivery-architecture-alignment-notes.md  delivery-runtime-layout.md  runtime-authority-decision.md  system_overview.md
docs/automation-loop/: README.md
docs/breaking-changes/: abi.md  entitlements.md  proto.md  shmem.md
docs/dev/: create-prd.md  generate-tasks.md
docs/evidence/: AF-00-01.md  AF-00-02a.md  AF-00-02b.md  AF-00-03.md  AF-00-04.md  AF-00-05.md  AF-01-01.md  AF-01-02.md  AF-02-01.md  AF-02-02.md  AF-03-01.md  AF-03-02.md  AF-04-01.md  AF-04-02.md  AF-05-01.md  AF-05-02.md  branch-worktree-stabilization-inventory.md  task-1-runtime-authority-alignment.md
docs/governance/: artifact-storage-policy.md  constraint-inventory.md  constraint-ledger-schema.md
docs/proto/: capture.md
docs/security/: threat-model.md  trust-model.md
docs/sign-offs/: auth-provider.md  bundle-format.md
host/: README.md  capture_control.cpp  capture_control_server.cpp  capture_control_service.cpp  native_harness.cpp  supervisor.cpp
include/: capture_control.hpp  capture_control_service.hpp  plugin_system.hpp  supervisor.hpp
logs/: admin_audit.ndjson  bundle_install_report.json  diagnostics_export.json  env_report.json  verify-requirements-evidence.md
logs/verification/: AF-00-01.json  AF-00-02a.json  AF-00-02b.json  AF-00-03.json  AF-00-04.json  AF-00-05.json  AF-01-01.json  AF-01-02.json  AF-02-01.json  AF-02-02.json  AF-03-01.json  AF-03-02.json  AF-04-01.json  AF-04-02.json  AF-05-01.json  AF-05-02.json  status_snapshot.json
plan/: process-verification-authority-2.md
proto/: capture.proto
scripts/: block-dangerous.sh  build-assets.ps1  build-native.ps1  check-quality.ps1  edit-issue-labels.sh  format-changed-files.sh  generate-boilerplate.ps1  gh.sh  inject-context.sh  install-uv.sh  log-tool-use.sh  package-windows.ps1  plan-exec-report.ps1  run-e2e.ps1  run-related-tests.sh  scan-secrets.sh  verify-env.ps1  verify-requirements.ps1
src/aetherflow/: __init__.py  example.py  main.py
tasks/: tasks-af-00-03-remediation.md  tasks-af-00-04-remediation.md  tasks-af-00-05-remediation.md  tasks-af-01-01-remediation.md  tasks-af-01-02-remediation.md  tasks-af-02-01-remediation.md  tasks-af-02-02-remediation.md  tasks-af-03-01-evidence-proof-matrix.md  tasks-af-03-01-remediation.md  tasks-af-03-02-remediation.md  tasks-commit-hygiene-change-splitting.md  tasks-rework-plan.md  tasks-verification-authority-gap-closure.md  tasks-verification-authority-gaps.md
tests/: bundle_manifest_fixtures.py  conftest.py  test_bundle_installer.py  test_security.py
tests/contracts/: test_artifact_storage_gitignore.py  test_canonical_identity.py  test_cmake_configuration.py  test_delivery_architecture_alignment.py  test_env_readiness.py  test_evidence_packs.py  test_execution_contracts.py  test_executor_routing.py  test_foundational_constraint_inventory.py  test_frozen_contracts.py  test_governance_recovery_artifacts.py  test_model_alias_config.py  test_native_harness.py  test_native_python_boundary.py  test_plan_completion_policy.py  test_plan_exec_recovery.py  test_plan_metadata.py  test_pr28_review_surface_triage.py  test_prd_execution_readiness.py  test_proof_verifier.py  test_regrade.py  test_supporting_docs_config_layer.py  test_tool_authority.py  test_verification_reporting.py  test_verification_standard.py  test_verification_support_layer.py  test_verify_requirements_evidence.py
tests/e2e/: test_capture_premium_e2e.py  test_onboarding_timing.py  test_verification_chain.py
tests/fixtures/: __init__.py  fake_opencv_capture_probe.py
tests/integration/: test_admin_dashboard.py  test_capture_120fps_path.py  test_capture_opencv.py  test_capture_premium_gating.py  test_capture_stability.py  test_diagnostics_export.py  test_environment_bundle_workflow.py  test_host_supervision_model.py  test_input_plugins.py  test_kbm_ingestion.py  test_mapping_pipeline.py  test_native_capture_control_grpc.py  test_output_virtualization.py  test_plugin_catalog_locking.py  test_resources_manifest.py  test_signed_plugin_loading.py  test_worker_ipc_flow.py  test_worker_supervisor.py
tests/stress/: test_worker_crash_loop.py
tests/ui/: test_app_window.py  test_driver_panel.py  (+13 more)
tools/: __init__.py  agent_call.py  apply_writes.py  audit_plan_completion.py  build_assets.py  check_quality.py  context_utils.py  export_diagrams.py  gbnf_grammars.py  generate_verification_report.py  json_utils.py  models.ini  native_build.py  plan_exec.py  plan_exec_report.py  prompts.py  proof_verifier.py  shell_utils.py  summarize_security_report.py  validation_gate.py  verify_requirements.py  wrap_markdown_tables.py
(+132 files in other folders)
