[project]
name = "aetherflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "loguru>=0.7.3",
    "mss>=10.1.0",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "protobuf>=6.33.5,<7.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyside6==6.9.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
automation = [
    "openai>=2.28.0",
    "anyio>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = "test_*.py"
pythonpath = ["src", "."]
addopts = "-ra -q"

[project.scripts]
aetherflow = "aetherflow.main:main"
build-assets = "tools.build_assets:main"
check-quality = "tools.check_quality:main"
verify-requirements = "tools.verify_requirements:main"
plan-exec-report = "tools.plan_exec_report:main"

[project.gui-scripts]
aetherflow-gui = "aetherflow.main:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
src = ["src", "."]
extend-exclude = [
    "*_pb2.py",
    "*_pb2_grpc.py",
    ".venv",
    "build",
    ".claude",
    ".codex",
    ".agents",
    ".tmp",
]

[tool.bandit]
exclude_dirs = [
    "tests",
    "venv",
    ".venv",
    "build",
    ".codex",
    ".agents",
    "*_pb2.py",
    "*_pb2_grpc.py",
]
skips = [
    "B101", # assert used
    "B104", # string '0.0.0.0' used only in URL heuristic, not binding
    "B608", # string concatenation for LLM prompts, not SQL
]
level = "medium"
confidence = "high"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle errors
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "RUF",
    "D",
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "Q",   # flake8-quotes — enforces docstring-quotes = "single"
]
ignore = [
    "E203",
    "D203",
    "D213", # pick ONE of D212/D213; keep D212 behavior + silence warning
    "D300", # ruff formatter uses """ for docstrings; D300 would conflict
    "Q002", # ruff formatter enforces """ for docstrings; Q002 would conflict
    "E501",
    "D100"
]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["aetherflow", "tools"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tools/**/*.py" = ["D100", "D104", "T201"]  # skip module/package docstrings; enforce class/function/method
"tests/**/*.py" = ["D"]
"src/**/__init__.py" = ["D104"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
# docstring-quotes not set — ruff formatter enforces """ and cannot be changed

[tool.pyright]
include = ["src", "tools"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    ".codex",
    ".agents",
    "src/aetherflow/proto",
]
extraPaths = ["src", "."]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
